--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
 dependencies = [
+    "flask>=3.1.1",
     "pytelegrambotapi>=4.27.0",
+    "python-dotenv>=1.1.1",
 ]
